<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
	
    <LinearLayout
        android:id="@+id/formulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       <LinearLayout 
            android:id="@+id/layoutDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">     
	       	
            <LinearLayout 
                android:id="@+id/layoutSpinner"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            <LinearLayout 
	                android:id="@+id/layoutSpinnerDia"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical">
		            <TextView  
		                android:id="@+id/tvDia"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:hint="@string/tvDia"/>
		            <Spinner 
		                android:id="@+id/sListaDia"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"/>
		         </LinearLayout>
		         <LinearLayout 
	                android:id="@+id/layoutSpinnerMes"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical">
		            <TextView  
		                android:id="@+id/tvMes"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:hint="@string/tvMes"/>
		            <Spinner 
		                android:id="@+id/sListaMes"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"/>
	             </LinearLayout>
	             <LinearLayout 
	                android:id="@+id/layoutSpinnerAno"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical">
		            <TextView  
		                android:id="@+id/tvAno"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:hint="@string/tvAno"/>
	              	<Spinner 
		                android:id="@+id/sListaAno"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"/>
	              </LinearLayout>
            </LinearLayout>
            
            <TextView  
                android:id="@+id/tvAsunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvAsunto"/>
            <EditText 
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etAsunto"/>
        </LinearLayout>
        
        <Button 
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_marginTop="20dp">
        </Button>
    </LinearLayout>
    
     <ListView 
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="false" />
</LinearLayout>
